--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,8 +49,7 @@ footer {
 }
 
 .nav a:hover {
-  background-color: #040404;
-  color: #eef0eb;
+  border-bottom: solid 2px #042bfc;
 }
 
 .overlay {
