--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,10 @@
 @import url("../vendor/normalize.css");
 
+@import url("../blocks/header.css");
+
 @import url("../blocks/nav.css");
+
+@import url("../blocks/gallery.css");
 
 body {
   font-family: Arial, sans-serif;
@@ -14,7 +18,7 @@ body {
 
 /* Header styling */
 
-.overlay {
+.home__overlay {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,28 +51,17 @@ body {
   flex-direction: column;
 }
 
-section {
-  /* margin: 0 auto; */
-}
-
 h1,
 h2 {
   color: #eef0eb;
 }
 
-/* Gallery Styles */
-.gallery {
-  padding: 40px 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+.recent__title {
+  margin: 0;
+  padding-top: 40px;
 }
 
-.gallery img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
+/* Gallery Styles */
 
 .video-container {
   position: relative;
@@ -151,6 +144,12 @@ footer {
   text-align: center;
   padding: 20px 0;
   width: 100%;
+}
+
+@media screen (max-width: 544px) {
+  .contact__button {
+    width: 80%;
+  }
 }
 
 /* Media Queries for Responsive Design */
