Refactor all page and use social=links-card block for scalability

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,175 +1,9 @@
 @import url("../vendor/normalize.css");
 
-@import url("../blocks/header.css");
+@import url("../blocks/page.css");
 
-@import url("../blocks/nav.css");
+@import url("../blocks/main.css");
 
-@import url("../blocks/gallery.css");
+@import url("../blocks/social-links-card.css");
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #eef0eb;
-  background-color: #2d2d34;
-  text-align: center;
-  font-size: 16px;
-}
-
-/* Header styling */
-
-.home__overlay {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 5%;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-
-.home {
-  width: 100%;
-  background-image: url("https://images.unsplash.com/photo-1483354483454-4cd359948304?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 99vh;
-}
-
-.home__logo {
-  width: 50%;
-  flex-shrink: 1;
-}
-
-.content {
-  margin-bottom: 3rem;
-  display: flex;
-  flex-direction: column;
-}
-
-h1,
-h2 {
-  color: #eef0eb;
-}
-
-.recent__title {
-  margin: 0;
-  padding-top: 40px;
-}
-
-/* Gallery Styles */
-
-.video-container {
-  position: relative;
-  width: 100%; /* Hace que ocupe el 100% del contenedor */
-  padding-bottom: 56.25%; /* Proporción 16:9 (altura = 9/16 * ancho) */
-  height: 0; /* La altura será controlada por el padding */
-}
-
-.video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%; /* Ocupa todo el ancho del contenedor */
-  height: 100%; /* Ocupa toda la altura del contenedor */
-  border: 0;
-}
-
-/* Botón */
-.home__button {
-  display: inline-block;
-  background-color: #042bfc;
-  color: #eef0eb;
-  text-decoration: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin-top: 20px;
-}
-
-.home__button:hover {
-  background-color: #eef0eb;
-  color: #040404;
-}
-
-/* Contact Section */
-.contact {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  align-items: center;
-}
-
-.contact__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #042bfc;
-  font-size: 1rem;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin-top: 1rem;
-  width: 22rem;
-  text-decoration: none;
-}
-
-.button-text {
-  color: #eef0eb;
-}
-
-.social-logo {
-  width: 3rem;
-}
-
-.contact__button:hover {
-  background-color: #eef0eb;
-  cursor: pointer;
-}
-
-.contact__button:hover .button-text {
-  color: #040404;
-}
-
-.contact__button:hover .social-logo {
-  filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%)
-    contrast(100%);
-}
-
-footer {
-  background-color: #040404;
-  color: #eef0eb;
-  text-align: center;
-  padding: 20px 0;
-  width: 100%;
-}
-
-@media (max-width: 544px) {
-  .contact__button {
-    width: 80%;
-  }
-}
-
-/* Media Queries for Responsive Design */
-@media (max-width: 768px) {
-  .home__logo {
-    width: 90%;
-    height: auto;
-  }
-
-  .gallery img {
-    width: 100%; /* Asegura que las imágenes se ajusten en pantallas pequeñas */
-    max-width: 100%;
-  }
-
-  .gallery {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-.information {
-  padding: 0 1rem;
-}
+@import url("../blocks//Footer/footer.css");
