used old background image for site

--- a/blocks/social-links-card.css
+++ b/blocks/social-links-card.css
@@ -34,7 +34,7 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 1.5;
-  color: #b4b8ab;
+  color: #fff;
 }
 
 .social-links-card__user-main-information {
