--- a/blocks/page.css
+++ b/blocks/page.css
@@ -8,4 +8,7 @@
   font-size: 16px;
   display: flex;
   flex-direction: column;
+  background-image: url("https://images.unsplash.com/photo-1483354483454-4cd359948304?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
