--- a/blocks/Footer/footer.css
+++ b/blocks/Footer/footer.css
@@ -1,3 +1,8 @@
 .footer {
   background-color: #000;
 }
+@media screen and (max-width: 571px) {
+  .footer__copyright {
+    font-size: 0.75rem;
+  }
+}
