--- a/blocks/Footer/footer.css
+++ b/blocks/Footer/footer.css
@@ -1,6 +1,22 @@
 .footer {
   background-color: #000;
 }
+
+.footer__credit {
+  font-size: 0.75rem;
+  color: #888;
+  text-align: center;
+  margin-top: 0.25rem;
+}
+
+.footer__credit-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer__credit-link:hover {
+  text-decoration: underline;
+}
 @media screen and (max-width: 571px) {
   .footer__copyright {
     font-size: 0.75rem;
