--- a/blocks/main.css
+++ b/blocks/main.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 174px;
+  padding: 174px 0;
 }
 
 @media screen and (max-width: 571px) {
