--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,23 @@
 @import url("../vendor/normalize.css");
 
-@import url("../blocks/page.css");
+@import url("../vendor/fonts.css");
 
-@import url("../blocks/main.css");
+@import url("../blocks/page/page.css");
 
-@import url("../blocks/social-links-card.css");
+@import url("../blocks/header/header.css");
 
-@import url("../blocks//Footer/footer.css");
+@import url("../blocks/nav/nav.css");
+
+@import url("../blocks/content/content.css");
+
+@import url("../blocks/section/section.css");
+
+@import url("../blocks/about/about.css");
+
+@import url("../blocks/services/services.css");
+
+@import url("../blocks/equipment/equipment.css");
+
+@import url("../blocks/Footer/footer.css");
+
+@import url("../blocks/contact/contact.css");
